--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   
   # Real pose detection using Google ML Kit
   google_mlkit_pose_detection: ^0.14.0
+  
+  # Google Generative AI for chatbot
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
